Fix for widget spacing in sections, form checkbox fixes

--- a/less/widgets/widgets.less
+++ b/less/widgets/widgets.less
@@ -87,6 +87,10 @@
     [data-name="row"] .row__container > & {
         margin-bottom: 16px;
     }
+
+    [data-name="row"] & {
+        width: 100%;
+    }
 }
 
 // Responsive Column Widgets
